crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__properties.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"properties\":{\"name\":{\"type\":\"string\"}},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.iter()
                    .all(|(key, instance)| {
                        let key_str = key.as_str();
                        match key_str {
                            "name" => instance.is_string(),
                            _ => true,
                        }
                    })
            }
            _ => false,
        }
