crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__self_ref_cycle.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"$ref\":\"#\"}"
expression: is_valid_body(schema)
---
validate_ref_0(instance)
