crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__unique_items.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"type\":\"array\",\"uniqueItems\":true}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                jsonschema::__private::unique_items::is_unique(arr)
            }
            _ => false,
        }
